--- a/site/docs/tbdex/wallet/receive-quote.mdx
+++ b/site/docs/tbdex/wallet/receive-quote.mdx
@@ -32,9 +32,10 @@ The Quote will be returned in JSON form:
 ```js
 {
   "metadata": {
-    "from": " /* PFI's DID */ ",    
-    "to": " /* Customer's DID */ ",   ,
     "exchangeId": "rfq_01hj07tb0rev8avhmqd8gggnkh",
+    "from": " /* PFI's DID */ ",    
+    "to": " /* Customer's DID */ ",    
+    "protocol": "1.0",
     "kind": "quote",
     "id": "quote_01hj07tb6be2htn8bbx8afcjw9",
     "createdAt": "2023-12-19T05:12:16.331Z"
@@ -43,11 +44,20 @@ The Quote will be returned in JSON form:
     "expiresAt": "2024-05-01T05:00:00.000Z",
     "payin": {
       "currencyCode": "BTC",
-      "amountSubunits": "1000"
+      "amount": "0.01",
+      "fee": "0.0001",
+      "paymentInstruction": {
+        "link": "https://example.com/payinInstructions",
+        "instruction": "Instructions for customer to pay PFI"
+      }
     },
     "payout": {
       "currencyCode": "KES",
-      "amountSubunits": "123456789"
+      "amount": "123456789",
+      "paymentInstruction": {
+        "link": "https://example.com/payoutInstructions",
+        "instruction": "Instructions for PFI to pay customer"
+      }
     }
   },
   "signature": " /* PFI's cryptographic signature */ "
@@ -60,7 +70,7 @@ The Quote will be returned in JSON form:
 After receiving the exact Quote, your customer may decide not to place an order. 
 In this case, you can send a **Close** message to the PFI which will end the exchange.
 
-To terminate the exchange, create a `Close` message, sign it with the customer's [Portable DID](/docs/web5/build/decentralized-identifiers/how-to-create-did#portable-did), and send the message.
+To terminate the exchange, create a `Close` message, sign it with the customer's [Bearer DID](/docs/web5/build/decentralized-identifiers/how-to-create-did#create-did), and send the message.
 
 <Shnip
   snippets={[
