--- a/site/blog/2024-04-07-launch-of-tbdex-v1.mdx
+++ b/site/blog/2024-04-07-launch-of-tbdex-v1.mdx
@@ -29,13 +29,13 @@ import Button from '@site/src/components/Button';
 
 ![tbDEX 1.0 Now Available](/img/tbdex-v1-blog-header.png)
 
-The first major version of tbDEX, an open source liquidity and trust protocol, has been released! 🎉 SDK implementations of the protocol are available in TypeScript/JavaScript, Kotlin, and Swift enabling integration with Web, Android, and iOS applications.
+The first major version of [tbDEX](https://www.tbdex.io/), an open source liquidity and trust protocol, has been released! 🎉 SDK implementations of the protocol are available in TypeScript/JavaScript, Kotlin, and Swift enabling integration with Web, Android, and iOS applications.
 
 <!--truncate-->
 
-tbDEX is architected on [Web5](/projects/web5/) infrastructure, utilizing decentralized technologies such as [Decentralized Identifiers (DIDs)](/docs/web5/learn/decentralized-identifiers) and [Verifiable Credentials (VCs)](/docs/web5/learn/verifiable-credentials) to securely validate counterparty identity and trust, as well as desired compliance with relevant laws and regulations.
-
 tbDEX enables wallet applications to connect liquidity seekers with providers and equips all participants with a common language for facilitating transactions.
+
+tbDEX is architected on [Web5](/projects/web5/) infrastructure, utilizing decentralized technologies such as [Decentralized Identifiers (DIDs)](/docs/web5/learn/decentralized-identifiers) and [Verifiable Credentials (VCs)](/docs/web5/learn/verifiable-credentials) to securely validate counterparty identity and trust, as well as helping to enable compliance with relevant laws and regulations.
 
 ## 🏦 Features for PFIs
 Participating Financial Institutions (PFIs) can use tbDEX to provide liquidity to any wallet application in the world who also uses tbDEX. Version 1.0 of tbDEX includes the ability to:
@@ -69,13 +69,14 @@ Wallet applications using tbDEX act as agents for customers who are seeking liqu
 
 
 ## ✅ Features for Issuers
-In a tbDEX ecosystem, verifiable credentials serve as a method for establishing trust and ensuring regulatory compliance during transactions. Issuers create and distribute these credentials. tbDEX utilizes the Web5 SDK to allow issuers to:
+In a tbDEX ecosystem, verifiable credentials serve as a method for establishing trust and facilitating regulatory compliance during transactions. Issuers create and distribute these credentials. tbDEX utilizes the Web5 SDK to allow issuers to:
 
 * Create decentralized identifiers for PFIs, Issuers, and Wallet users
 
 * Issue verifiable credentials
 
 * Verify credentials
+
 
 :::tip KYC Credential
 We have developed a [Known Customer Credential](https://www.tbdex.io/guides/kcc) specifically designed to represent a PFI's Know Your Customer regulatory requirements.
