--- a/site/docs/tbdex/issuer/vc-serverSetup.mdx
+++ b/site/docs/tbdex/issuer/vc-serverSetup.mdx
@@ -196,6 +196,6 @@ export { app as api };
 
 Now that you have your server environment set up, depending on your use case, you can proceed with one of the following guides:
 
-- [Credential Issuance Guide](/)
+- [Credential Issuance Guide](/docs/tbdex/issuer/kcc/kcc-issuer)
 
-- [Known Customer Credential Guide](/)
+- [Known Customer Credential Guide](/docs/tbdex/issuer/kcc/kcc-wallet)
