Adding dynamic and synced deps in docs

--- a/site/docs/tbdex/issuer/vc-serverSetup.mdx
+++ b/site/docs/tbdex/issuer/vc-serverSetup.mdx
@@ -34,28 +34,11 @@ This example demonstrates how to use Express to set up the VC issuance service. 
 
 You'll also need to install `@web5/credentials` to create and issue credentials:
 
-<Shnip
-  snippets={[
-    {
-      snippetName: 'credentialIssuanceJsPackage',
-      language: 'JavaScript',
-      codeLanguage: 'bash',
-    },
-    {
-      language: 'Kotlin',
-      nestedSnippets: {
-        Gradle: {
-          snippetName: 'credentialIssuanceGradlePackage',
-          language: 'gradle',
-        },
-        Maven: {
-          snippetName: 'credentialIssuanceMavenPackage',
-          language: 'xml',
-        },
-      },
-    },
-  ]}
-/>
+<Dependencies languageDependencies={[
+  { language: 'javascript', dependencies: ['@web5/credentials'] },
+  { language: 'maven', dependencies: ['web5-credentials'] },
+  { language: 'gradle', dependencies: ['web5-credentials'] },
+]}/>
 
 ### Create a DID
 
