--- a/site/docs/tbdex/pfi/creating-quotes.mdx
+++ b/site/docs/tbdex/pfi/creating-quotes.mdx
@@ -26,8 +26,8 @@ Building on the example from the [Exchange API Provider section](/docs/tbdex/pfi
 
 <Shnip snippets={
   [
-    { snippetName: 'pfiCreateOfferingJs', language: 'JavaScript'},
-    { snippetName: 'pfiCreateOfferingKt', language: 'Kotlin'}
+    { snippetName: 'pfiWriteOfferingJs', language: 'JavaScript'},
+    { snippetName: 'pfiWriteOfferingKt', language: 'Kotlin'}
   ]} />
 
 ## Verifying the Required Claims
