Removing extra tags

--- a/site/blog/2024-04-08-did-dht.md
+++ b/site/blog/2024-04-08-did-dht.md
@@ -4,7 +4,7 @@ title: "DID DHT: Ready For Primetime"
 description: "Learn how the DID:DHT method was created and why it's the default method of Web5 and tbDEX."
 authors:
   name: Gabe Cohen
-tags: [Decentralized Identifiers, DHT]
+tags: [Decentralized Identity, DHT]
 ---
 
 <head>
