Update tbdex-kt api reference links

--- a/site/docs/tbdex/pfi/anatomy-of-a-pfi.mdx
+++ b/site/docs/tbdex/pfi/anatomy-of-a-pfi.mdx
@@ -91,7 +91,7 @@ Error handling for things like duplicate RFQs, invalid data, and non-existent Of
 
 ## Offerings API Provider
 
-The `Offerings` API is the set of methods that deals with reading and writing any offering data, based on the <LanguageSwitchLink text="OfferingsApi" links='{"JavaScript": "https://tbd54566975.github.io/tbdex-js/interfaces/_tbdex_http_server.OfferingsApi.html", "Kotlin": "https://tbd54566975.github.io/tbdex-kt/httpserver/tbdex.sdk.httpserver.models/-offerings-api/index.html?query=interface%20OfferingsApi"}'/> class. 
+The `Offerings` API is the set of methods that deals with reading and writing any offering data, based on the <LanguageSwitchLink text="OfferingsApi" links='{"JavaScript": "https://tbd54566975.github.io/tbdex-js/interfaces/_tbdex_http_server.OfferingsApi.html", "Kotlin": "https://tbd54566975.github.io/tbdex-kt/docs/tb-d-e-x%20-s-d-k%20-documentation/tbdex.sdk.httpserver.models/-offerings-api/index.html"}'/> class.
 Although the interface for `OfferingsApi` only requires to be filled out with read operations, you may find it useful to write operations into the class as well. 
 
 Although the Offerings API isn’t directly exposed in the main server entrypoint, it is still used to fetch and write offerings to your PFI's database. 
