--- a/site/docs/tbdex/pfi/required-sdks.mdx
+++ b/site/docs/tbdex/pfi/required-sdks.mdx
@@ -18,28 +18,11 @@ To implement and operate as a PFI, you’ll need to use the following SDKs:
 
 ## Install SDKs
 
-<Shnip
-  snippets={[
-    {
-      snippetName: 'pfiSdkInstallJs',
-      language: 'JavaScript',
-      codeLanguage: 'bash',
-    },
-    {
-      language: 'Kotlin',
-      nestedSnippets: {
-        Gradle: {
-          snippetName: 'pfiSdkInstallGradle',
-          language: 'gradle',
-        },
-        Maven: {
-          snippetName: 'pfiSdkInstallPom',
-          language: 'xml',
-        },
-      },
-    },
-  ]}
-/>
+<Dependencies languageDependencies={[
+  { language: 'javascript', dependencies: ['@web5/dids', '@web5/credentials', '@tbdex/http-server'] },
+  { language: 'maven', dependencies: ['tbdex'] },
+  { language: 'gradle', dependencies: ['tbdex'] },
+]}/>
 
 ## Import Classes
 
@@ -50,12 +33,16 @@ To send and receive tbDEX messages, import the following classes:
   inlineSnippets={[
     {
       code: `      import tbdex.sdk.httpserver.TbdexHttpServer
-      import tbdex.sdk.httpserver.models.SubmitKind
       import tbdex.sdk.protocol.models.Rfq
       import tbdex.sdk.protocol.models.Quote
       import tbdex.sdk.protocol.models.Order
       import tbdex.sdk.protocol.models.OrderStatus
-      import tbdex.sdk.protocol.models.Close`,
+      import tbdex.sdk.protocol.models.Close
+      import tbdex.sdk.protocol.Parser
+      import tbdex.sdk.protocol.Validator
+      import tbdex.sdk.protocol.serialization.Json
+      import web5.sdk.credentials.PresentationExchange
+      import web5.sdk.credentials.model.*`,
       language: 'Kotlin',
     },
   ]}
