--- a/site/docs/tbdex/pfi/creating-offerings.mdx
+++ b/site/docs/tbdex/pfi/creating-offerings.mdx
@@ -87,7 +87,7 @@ When combining all the data above, you can end up with a full Offering object th
     "createdAt": "2024-04-04T05:10:38.796Z"
   },
   "data": {
-    "description": "Selling BTC for USD\"",
+    "description": "Selling BTC for USD",
     "payin": {
       "currencyCode": "USD",
       "methods": [
