Apply suggestions from code review

--- a/site/blog/2024-04-07-launch-of-tbdex-v1.mdx
+++ b/site/blog/2024-04-07-launch-of-tbdex-v1.mdx
@@ -59,7 +59,7 @@ Wallet applications using tbDEX act as agents for customers who are seeking liqu
 
 * Initiate exchanges with PFIs
 
-* Present verifiable credentials to PFIs on behalf on your customers
+* Present verifiable credentials to PFIs on behalf of your customers
 
 * Receive real-time quotes and place orders
 
@@ -69,7 +69,7 @@ Wallet applications using tbDEX act as agents for customers who are seeking liqu
 
 
 ## ✅ Features for Issuers
-In a tbDEX ecosystem, verifiable credentials serve as a method for establishing trust and facilitating regulatory compliance during transactions. Issuers create and distribute these credentials. tbDEX utilizes the Web5 SDK to allow issuers to:
+In a tbDEX ecosystem, verifiable credentials - created and distributed by Issuers - serve as a method for establishing trust and facilitating regulatory compliance during transactions. tbDEX utilizes the Web5 SDK to allow Issuers to:
 
 * Create decentralized identifiers for PFIs, Issuers, and Wallet users
 
